# STSerial-Cmake

./: CMakeLists.txt  stm32f3xx_hal_conf.h
src/: main.cpp  ring_buffer.h  stm32f3xx_it.cpp  stm32f3xx_it.h  uart.cpp  uart.h  uart_msp_impl.cpp
